# ECEKNYA-TYPE-

./: database.cpp  result.cpp  typingengine.cpp  uinavigation.cpp
Full file/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
